--- a/app/src/main/res/layout/activity_make_char.xml
+++ b/app/src/main/res/layout/activity_make_char.xml
@@ -103,13 +103,18 @@
       app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
   <Button
-      android:id="@+id/make_bt"
+      android:id="@+id/fin_makechar"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="60dp"
-      android:text="Button"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
+      android:layout_height="32dp"
+      android:layout_marginTop="36dp"
+      android:background="@drawable/bt_check"
+      android:fontFamily="@font/kopubworld_dotum_bold"
+      android:text="확인"
+      android:textColor="@color/white"
+      android:textSize="16sp"
+      app:layout_constraintEnd_toEndOf="@+id/edit_word"
+      app:layout_constraintHorizontal_bias="0.989"
+      app:layout_constraintStart_toStartOf="@+id/edit_word"
       app:layout_constraintTop_toBottomOf="@+id/edit_word" />
 
 
