--- a/app/src/main/res/layout/activity_make_session.xml
+++ b/app/src/main/res/layout/activity_make_session.xml
@@ -64,4 +64,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+    <Button
+        android:id="@+id/fin_makeses"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:text="확인"
+        android:fontFamily="@font/kopubworld_dotum_bold"
+        android:textSize="16dp"
+        android:textColor="@color/white"
+        android:background="@drawable/bt_check"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/session_name"
+        app:layout_constraintHorizontal_bias="0.995"
+        app:layout_constraintStart_toStartOf="@+id/session_name"
+        app:layout_constraintTop_toBottomOf="@+id/session_name"
+        app:layout_constraintVertical_bias="0.065" />
 </android.support.constraint.ConstraintLayout>
